# pipo

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README-runtime.md  README.md  README.me  README.org  Vagrantfile  ansible.cfg  build.rs  compose-dev.yaml  compose-test.yaml  deny.toml  docker-compose.yml  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
ansible/: 00.yml  01.yml  README.md
ansible/roles/sshUp/tasks/: main.yml
ansible/roles/swap/tasks/: main.yml
apps/pipo_supervisor/: mix.exs
apps/pipo_supervisor/lib/: pipo_supervisor.ex
apps/pipo_supervisor/lib/pipo_supervisor/: application.ex  burn_in.ex  ndjson.ex  port_worker.ex  router.ex  supervisor.ex
apps/pipo_supervisor/test/: burn_in_test.exs  pipo_supervisor_test.exs
apps/pipo_supervisor/test/integration/: protocol_wire_test.exs
cmd/parity-harness/: main.go
cmd/pipo/: main.go
cmd/pipo-config-migrate/: main.go
dev-environment/ngrok/: ngrok.yml
dev-environment/pipo/: config-example.json
dev-environment/postgres-init/: Dockerfile  init.sh
dev-environment/synapse/: homeserver.yaml  synapse.log.config
dev-environment/unrealircd/: Dockerfile  unrealircd.conf
docs/: README.md  burn_in.md  go-rewrite-compat-spec.md  go-rollout-deployment-plan.md  irc-threading-modes.md  operational_readiness_runbooks.md  serenity-0.12-migration-notes.md  serenity-upgrade-errors.md  slack-richtext-compat.md
docs/parity/: discord.md  integration-matrix.md  irc.md  minecraft.md  mumble.md  rachni.md  slack.md  thirdparty-test-credentials.md
docs/parity/fixtures/: high-risk.json  integration.json
etc/pipo/: config.example.json  transport.discord.example.json  transport.irc.example.json  transport.slack.example.json  transports.example.json
fixtures/slack_rich_text/: code_within_list.golden  code_within_list.json  complex_formatting_blocks.golden  complex_formatting_blocks.payload.json  complex_mentions_styles.golden  complex_mentions_styles.payload.json  emoji_link_date.golden  emoji_link_date.json  list_bullet.json  list_in_quote.golden  list_in_quote.json  list_ordered_indented.golden  list_ordered_indented.json  mentions.golden  mentions.json  preformatted.golden  preformatted.json  quote.golden  quote.json  quote_in_list.golden  quote_in_list.json  section_text.json
infra/integration/: compose.integration.yaml
internal/config/: config.go  config_test.go
internal/core/: bus.go  bus_test.go  runtime.go
internal/integration/drivers/: drivers.go  drivers_test.go
internal/model/: event.go
internal/store/: json.go  observe.go  sqlite.go  sqlite_test.go
internal/telemetry/: telemetry.go
internal/transports/: adapters.go  errors.go  factory.go  factory_test.go  irc_adapter.go  irc_adapter_test.go  slack_adapter.go  slack_adapter_test.go  slack_runtime.go  slack_runtime_cache_test.go
internal/transports/noop/: noop.go
native/transport_runtime/: Cargo.toml
native/transport_runtime/src/: lib.rs  main.rs  protocol.rs
native/transport_runtime/tests/: runtime_spec.rs  smoke.rs
packaging/: README.md  build_tarball.sh  compatibility_matrix.conf  migrate_config_format.py  resilience_test.sh  resolve_compatibility_matrix.py  smoke_test.sh  validate_release_metadata.sh
parser/: .gitignore  parser.org
parser/src/: error.rs  lib.rs  mumble.rs  types.rs
pipo_cgi/: Cargo.toml
pipo_cgi/src/: main.rs
schema/: README.md
schema/fixtures/: README.md  inject_message.ndjson  lifecycle.ndjson  malformed_lines.ndjson  message.ndjson  ready.ndjson  reload_config_expected_warn.ndjson  reload_config_inbound.ndjson
scripts/: integration_protocol_supervision.sh  parity-live-api-checks.sh  parity-thirdparty-preflight.sh
specs/: v1.md
src/: discord.rs  http.rs  irc.rs  lib.rs  main.rs  main2.rs  matrix.rs  mumble.rs  protos.rs  rachni.rs  slack.rs
src/integration/: drivers.rs
src/mumble/: cert_verifier.rs  protocol.rs
src/protos/: Mumble.rs
src/slack/: blocks.rs  entity_resolver.rs  objects.rs  parse.rs  rich_text_renderer.rs  web_api.rs
tests/: parity_integration.rs
(+1 files in other folders)
