[workspace]

[package]
name = "pipo"
version = "0.1.0"
edition = "2021"
authors = ["Noah Obert <nemored@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
bytes = "1.0"
chrono = "0.4"
deadpool-sqlite = "0.5"
emojis = "0.6"
futures = "0.3"
hmac = "0.11"
html-escape = "0.2"
irc = "0.15"
lazy_static = "1.4"
nix = "0.23"
#parser = { path = "./parser" }
protobuf = "2"
regex = "1.7"
reqwest = "0.11"
rusqlite = "0.28"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serenity = { version = "0.11", default_features = false, features = ["chrono", "client", "gateway", "native_tls_backend", "model"] }
sha2 = "0.10"
tokio = { version = "1.28", features = ["full"] }
tokio-rustls = "0.24"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
webpki-roots = "0.22"

[build-dependencies]
protoc-rust = "2"
