[package]
name = "transport_runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pipo-transport"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
